--- a/snippets/product-grid-item.liquid
+++ b/snippets/product-grid-item.liquid
@@ -122,17 +122,17 @@
         <div class="grid-product__price">
           {%- if on_sale -%}
             <span class="visually-hidden">{{ 'products.general.regular_price' | t }}</span>
-            <span class="grid-product__price--original">{{ product.compare_at_price | money }}</span>
+            <span class="grid-product__price--original">{{ product.compare_at_price | money  }}</span>
             <span class="visually-hidden">{{ 'products.general.sale_price' | t }}</span>
           {%- endif -%}
           {%- if product.price_varies -%}
-            {%- assign price = product.price_min | money -%}
+            {%- assign price = product.price | money -%}
             <span {% if on_sale %}class="sale-price"{% endif %}>
-              {{ 'products.general.from_text_html' | t: price: price }}
+              {{ price }} - {{ product.price_max | money }}
             </span>
           {%- else -%}
             <span {% if on_sale %}class="sale-price"{% endif %}>
-              {{ product.price  | money }}
+              {{ product.price  | money }} 
             </span>
           {%- endif -%}
 
@@ -180,20 +180,40 @@
 
                   assign color_file_name = value | handle | append: '.' | append: swatch_file_extension
                   assign color_image = color_file_name | file_img_url: '50x50' | prepend: 'https:' | split: '?' | first
+                  assign variant_image = variant.image | img_url | prepend: 'https:' | split: '?' | first
                   assign color_swatch_fallback = value | split: ' ' | last | handle
                   assign color_count = color_count | plus: 1
                 -%}
 
+                <script>
+                  // console.log('Variant Iamge', '{{variant_image}}');
+                  console.log('{{ product | json }}');
+                </script>
+
                 <a
-                  href="{{ variant.url | within: collection }}"
+                  href= "{{ variant.url | within: collection }}" data-toggle="tooltip"  title= "{{ product.color_image }} {{ value }}"
                   class="color-swatch color-swatch--small"
                   aria-label="{{ product.title }} - {{ value }}"
-                  style="background-color: {{ color_swatch_fallback }};{% if images[color_file_name] != blank %}  background-image: url({{ color_image }});{% endif %}">
+                  style="background-color: {{ color_swatch_fallback }}; {%- if images [color_file_name] != blank -%}  background-image: {% if variant.image != blank %}url({{ variant_image }}) {% else %} url({{ color_image }}) {% endif %} ; {%- endif -%}">
                 </a>
-              {%- endunless -%}
-             {%- endfor -%}
+                <!-- <a
+                  href= "{{ variant.url | within: collection }}" data-toggle="tooltip"  title= "{{ product.color_image }} {{ value }}"
+                  class="color-swatch color-swatch--small"
+                  aria-label="{{ product.title }} - {{ value }}"
+                  style="background-color: {{ color_swatch_fallback }}; {%- if images [color_file_name] != blank -%}  background-image: url({{ color_image }}); {%- endif -%}">
+                </a> -->
+                {%-endunless-%}
+            {%-endfor-%}
+              
           </div>
         {%- endif -%}
+        <!--  Tooltip For Hover Popup Script-->
+        <script>
+$(document).ready(function(){
+  $('[data-toggle="tooltip"]').tooltip();   
+});
+</script>
+        <!-- End Of Tooltip for hover Script -->
       {%- endfor -%}
     {%- endif -%}
     {%- if settings.enable_product_reviews -%}
