--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1,8 +1,63 @@
 .grid-product__content .tooltip{
-    background-color: grey;
+    background-color: #383838;
     color: white;
-    padding: 10px;
+    padding: 8px 10px;
+    letter-spacing: 2px;
+    font-size: 12px;
     position: absolute;
+    margin-top: -10px;
+}
+
+.tt_text{
+    position: absolute;
+    display: inline-block;
+    background: #383838;
+    color: #fff;
+    padding: 8px 10px;
+    font-size: 12px;
+    line-height: 12px;
+    white-space: nowrap;
+    visibility: hidden;
+    opacity: 0;
+    z-index: 1000000;
+    pointer-events: none;
+    -webkit-transition: .3s;
+    -moz-transition: .3s;
+    transition: .3s;
+    margin-left: 3px;
+    bottom: 25px;
+}
+
+.swatch-container:before{
+    visibility: hidden;
+    opacity: 0;
+    content: '';
+    position: absolute;
+    background: 0 0;
+    border: 6px solid transparent;
+    z-index: 1000001;
+    border-top-color: #383838;
+    margin-left: 6px;
+    -webkit-transform: translate3d(0,-3.5px,0);
+    -moz-transform: translate3d(0,-3.5px,0);
+    transform: translate3d(0,-3.5px,0);
+    transition: .3s;
+}
+
+.swatch-container:hover:before{
+    opacity: 1;
+    visibility: visible;
+    transform: translate3d(0,-10px,0);
+    -webkit-transform: translate3d(0,-10px,0);
+    -moz-transform: translate3d(0,-8px,0);
+}
+
+.swatch-container:hover .tt_text{
+    visibility: visible;
+    opacity: 1;
+    -webkit-transform: translateY(-5px);
+    -moz-transform: translateY(-5px);
+    transform: translateY(-5px);
 }
 
 .grid-product__content .tooltip-inner{
